--- a/myecharts/css/index.css
+++ b/myecharts/css/index.css
@@ -48,6 +48,7 @@ header .showTime {
 .mainbox .column:nth-child(2) {
   flex: 5;
   margin: 0 0.125rem 0.2rem;
+  overflow: hidden;
 }
 .mainbox .panel {
   position: relative;
@@ -110,6 +111,11 @@ header .showTime {
   text-align: center;
   font-size: 0.266667rem;
   font-weight: 400;
+}
+.mainbox .panel h2 a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 0.125rem;
 }
 .mainbox .panel .chart {
   height: 3rem;
@@ -235,5 +241,16 @@ header .showTime {
   }
   to {
     transform: translate(-50%, -50%) rotate(-360deg);
+  }
+}
+/* 约束屏幕尺寸 */
+@media screen and (max-width: 1024px) {
+  html {
+    font-size: 42px !important;
+  }
+}
+@media screen and (min-width: 1920px) {
+  html {
+    font-size: 80px !important;
   }
 }
