--- a/myecharts/css/index.less
+++ b/myecharts/css/index.less
@@ -51,6 +51,7 @@ header {
     .column:nth-child(2) {
         flex:5;
         margin: 0 .125rem 0.2rem;
+        overflow: hidden;
     }
     .panel{
         position: relative;
@@ -114,6 +115,11 @@ header {
             text-align: center;
             font-size: 0.266667rem;
             font-weight: 400;
+            a {
+                color: #fff;
+                text-decoration: none;
+                margin: 0 0.125rem;
+            }
         }
 
         .chart {
@@ -260,3 +266,16 @@ header {
         }
     }
 }
+
+
+/* 约束屏幕尺寸 */
+@media screen and (max-width: 1024px) {
+    html {
+      font-size: 42px !important;
+    }
+  }
+  @media screen and (min-width: 1920px) {
+    html {
+      font-size: 80px !important;
+    }
+  }
